@@ -4,6 +4,8 @@ See the file HISTORY for a user-oriented summary of all the changes.
 23-Jun-2009 (Gnomi)
   - Corrected a memory leak in send_udp.
     (comm.c)
+  - String corruption by present_clone.
+    (efuns.c)
 
 15-Jun-2009 (Fuchur)
   - (parse.c) Fix off-by-one error in find_string(). It returned a wrong index.
